# rng-tools

./: .cvsignore  .gitignore  .gitmodules  .travis.yml  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  acconfig.h  autogen.sh  configure.ac  configure.in  darn_impl.c  exits.h  fips.c  fips.h  ossl_helpers.c  ossl_helpers.h  rdrand_asm.S  rngd.8  rngd.8.in  rngd.c  rngd.h  rngd.service  rngd.service.in  rngd_darn.c  rngd_darn.h  rngd_entsource.c  rngd_entsource.h  rngd_jent.c  rngd_jitter.c  rngd_linux.c  rngd_linux.h  rngd_namedpipe.c  rngd_nistbeacon.c  rngd_opensc.c  rngd_pkcs11.c  rngd_qrypt.c  (+8 more)
contrib/: Makefile.am  randstat.c  rngtest.c
tests/: Makefile.am  rngtestjitter.sh  rngtesturandom.sh  rngtestzero.sh
