dnl Process this file with autoconf to produce a configure script.
AC_INIT(rngd.c)
AM_INIT_AUTOMAKE(rng-tools, 1.0)
AM_CONFIG_HEADER(rng-tools-config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_GCC_TRADITIONAL

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(sys/ioctl.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_SIZE_T

dnl Checks for library functions.

AC_OUTPUT(Makefile contrib/Makefile rngd.8)
